{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 9,
  "lineage": "0d2f6b88-c70f-5511-913a-5b4e2cca4faf",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "41ivio5qui3efpaqugkln2crca.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/example-publicip",
                "subnet_id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/internal"
              }
            ],
            "location": "northeurope",
            "name": "example-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "example-resources"
          },
          "dependencies": [
            "azurerm_public_ip.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "northeurope",
            "name": "example-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "example-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example_nsg",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/example-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.94.90.196",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "example-publicip",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3b54d1f6-a2f0-423a-bc10-a194b6f05110",
            "id": "/subscriptions/3e0977f2-4b83-4fc2-8ec5-58bc4e5f1f19/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-vnet",
            "location": "northeurope",
            "name": "example-vnet",
            "resource_group_name": "example-resources"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}